--- a/TicTacToe_Forms/TicTacToe_Forms/TicTacToe_Forms.csproj
+++ b/TicTacToe_Forms/TicTacToe_Forms/TicTacToe_Forms.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
+        <Title>TicTacToe</Title>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
